# mail-client

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
