[package]
name = "mail-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mail_client"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.16"

