[package]
name = "mail-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mail_client"

[dependencies]
actix-web = "4.3.1"
config="0.13"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
sqlx ={version="0.6",default-features=false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
"chrono",
"migrate"
]}
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
once_cell = "1.18.0"

[dev-dependencies]
reqwest = "0.11.16"

